--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -558,3 +558,10 @@
     .alert { font-family: "Roboto"; }
     .alert i.material-icons { position:relative;top:5px;font-size:23px; }
     .col-border-right { border-right: 1px solid #ddd; }
+    
+    .users_table {background: #f9f9f9;border-radius: 2px;padding: 10px !important;overflow: hidden;}
+    .users_table thead { background: #0099e5;color: #fff;box-shadow: none;border: 0px;font-family: "Roboto";font-size: 16px;text-shadow:none !important;}
+    .users_table thead th { border: 0px !important;border-bottom: 0px solid rgba(0,0,0,0.05) !important;b }
+    .users_table tbody td { border: 0px !important;border-bottom: 0px solid rgba(0,0,0,0.05) !important;box-shadow: 0 1px 0 0 rgba(0,0,0,0.1) !important; }
+    .users_table .role_col { width: 40%; }
+    
