--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -434,6 +434,7 @@
     /* Header */
     .navbar-inverse { background: #222;border: 0px;border-radius: 0px; }
     .ewide_no_margin { margin: 0px !important;padding: 0px !important; }
+    #ide_page .main_nav { margin: 0px !important;padding: 0px !important; }
     nav li { font-family: "Roboto";letter-spacing: .4px;text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.15);font-weight: 500; }
     nav .nav>li.active a, nav .nav>li:hover>a { box-shadow: 0px -3px 0px 0px #1274e7 inset !important;-webkit-transition:all .3s ease;background: rgba(255,255,255,0.1) !important;
         -moz-transition:all .3s ease;
@@ -565,3 +566,4 @@
     .users_table tbody td { border: 0px !important;border-bottom: 0px solid rgba(0,0,0,0.05) !important;box-shadow: 0 1px 0 0 rgba(0,0,0,0.1) !important; }
     .users_table .role_col { width: 40%; }
     
+    .btn-delete-user i { font-size:18px; }
