--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -575,5 +575,23 @@
 	.material-icons.md-24 { font-size: 24px; } /* Default */
 	.material-icons.md-36 { font-size: 36px; }
 	.material-icons.md-48 { font-size: 48px; }
+	.material-icons.valign{vertical-align:middle; padding-bottom:3px;}
 
     .nav-link {margin-left:10px; margin-right:5px;}
+    
+    .task-row{margin-top:20px;}
+    
+    .task-icon{text-align:center; vertical-align: middle;}
+    
+    .bs-callout {
+ 	padding: 15px 30px 15px 15px;
+ 	border-left: 5px solid #eee;}
+ 	
+	.bs-callout h4 {margin-top: 0;}
+	.bs-callout p:last-child { margin-bottom: 0;}
+	.bs-callout code,.bs-callout .highlight {background-color: #fff;}
+	.bs-callout-danger {background-color: #fcf2f2; border-color: #dFb5b4;}
+	.bs-callout-warning { background-color: #fefbed; border-color: #f1e7bc;}
+	.bs-callout-info {background-color: #f0f7fd; border-color: #d0e3f0;}
+	.bs-callout-disable {background-color: #f0f7fd; border-color: #d0e3f0;}
+	.bs-callout-success {background-color: #dff0d8; border-color: #00c851;}
